correct project structure
.gitignore
+ added more files to exclude

sun485/__init__.py
+ added suny85 project folder, which means everything got shifted down a node

suny485/projects/__init__.py
+ shifted folder down a node

suny485/projects/homework10/__init__.py
+ shifted folder down a node

suny485/projects/homework10/fruit_query.py
+ added docstring and comment to is_fruit()

suny485/tests/test_homework10.py
+ added happy & unhappy tests

tests/test_homework10.py
+ deleted during the folder move

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 .DS_Store
 .AppleDouble
 .LSOverride
+
+### Python template
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
