--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+### Intellij & Pycharm
 /.idea/misc.xml
 /.idea/modules.xml
 /.idea/inspectionProfiles/profiles_settings.xml
@@ -5,6 +6,9 @@
 /.idea/suny485.iml
 /.idea/vcs.xml
 /.idea/workspace.xml
+/.idea/*
+*/.idea/vcs.xml
+*/.idea/workspace.xml
 
 ### macOS template
 # General
@@ -17,3 +21,4 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.pytest_cache/
