--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-flake8 >= 6.0.0
-pytest >= 7.4.0
+flake8 >= 6.1.0
+mccabe==0.7.0
+pycodestyle==2.11.0
+pyflakes==3.1.0pytest >= 7.4.0
 pytest-html >= 3.2.0
 requests >= 2.31.0
