--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,6 +34,8 @@ jobs:
         python -m pip install -U pip
         pip install -r requirements.txt
         python setup.py install
+        echo "[pwd]: ${PWD}"
+        echo "[LS]: $(ls -al)"
         
 
     #- name: Set PYTHONPATH
@@ -47,11 +49,17 @@ jobs:
         echo "[pwd]: ${PWD}"
         echo "[LS]: $(ls -al)"
         echo "[pwd]: ${PWD}"
+        PWD=$(pwd)
         echo "[LS]: $(ls -al)"
 
     - name: Run pytest
       working-directory: ./suny485
       run: |
         echo "[pwd]: ${PWD}"
+        echo "[LS]: $(ls -al)"
+        export PYTHONPATH=$PWD/suny485
+        echo "[pythonpath]: ${PYTHONPATH}"
+        #echo "PYTHONPATH=$PYTHONPATH" >> $GITHUB_ENV
+        
         pytest -m 'not live_api'
       # working-directory: ${{env.working-directory}}
