--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,6 +34,8 @@ jobs:
         python -m pip install -U pip
         pip install -r requirements.txt
         python setup.py install
+        echo "[pwd]: ${PWD}"
+        echo "[LS]: $(ls -al)"
         
 
     #- name: Set PYTHONPATH
