--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,18 +11,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-      #with:
-      #  path: /home/runner/work
-      #run: |
-      #  echo ${{ github.workspace }}
-      #  echo $GITHUB_WORKSPACE
-      #  echo "[pwd]: ${PWD}"
 
     - name: Switch to Current Branch
       run: |
         git checkout ${{ env.BRANCH }}
-        echo ${{ github.workspace }}
-        echo $GITHUB_WORKSPACE
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -33,25 +25,21 @@ jobs:
       run: |
         python -m pip install -U pip
         pip install -r requirements.txt
+        pip install -e .
         python setup.py install
-        
+        echo "[pwd]: ${PWD}"
 
-    #- name: Set PYTHONPATH
-    #  run: echo "::set-env name=PYTHONPATH::$(pwd)/suny485"
-
-    - name: Adjust Location
-      working-directory: ./suny485
-      #  echo "[cd]: $(cd suny485)"
+    - name: Display Troubleshooting Information
       run: |
         echo "[workspace]: ${{ github.workspace }}"
         echo "[pwd]: ${PWD}"
         echo "[LS]: $(ls -al)"
-        echo "[pwd]: ${PWD}"
-        echo "[LS]: $(ls -al)"
 
     - name: Run pytest
-      working-directory: ./suny485
+      # working-directory: ./suny485
       run: |
         echo "[pwd]: ${PWD}"
-        pytest -m 'not live_api'
-      # working-directory: ${{env.working-directory}}
+        export PYTHONPATH=$PWD/suny485
+        echo "[pythonpath]: ${PYTHONPATH}"
+        echo "!! run pytest and exclude any live API tests !!"
+        pytest -m 'not live_api' -v --tb=short
