--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,6 +34,8 @@ jobs:
         python -m pip install -U pip
         pip install -r requirements.txt
         python setup.py install
+        echo "[pwd]: ${PWD}"
+        echo "[LS]: $(ls -al)"
         
 
     #- name: Set PYTHONPATH
@@ -50,8 +52,9 @@ jobs:
         echo "[LS]: $(ls -al)"
 
     - name: Run pytest
-      working-directory: ./suny485
+      working-directory: ./suny485/tests
       run: |
         echo "[pwd]: ${PWD}"
+        echo "[LS]: $(ls -al)"
         pytest -m 'not live_api'
       # working-directory: ${{env.working-directory}}
