--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,18 +34,11 @@ jobs:
         echo "[workspace]: ${{ github.workspace }}"
         echo "[pwd]: ${PWD}"
         echo "[LS]: $(ls -al)"
-#
-#    - name: Run pytest
-#      # working-directory: ./suny485
-#      run: |
-#        echo "[pwd]: ${PWD}"
-#        export PYTHONPATH=$PWD/suny485
-#        echo "[pythonpath]: ${PYTHONPATH}"
-#        echo "!! run pytest and exclude any live API tests !!"
-#        pytest -m 'not live_api' -v --tb=short
 
     - name: Run tests and coverage report
       run: |
+        # Note: the following commands have three entirely different instances
+        # of the "-m" flag. These are positionally required!
         echo "[pwd]: ${PWD}"
         export PYTHONPATH=$PWD/suny485
         echo "[pythonpath]: ${PYTHONPATH}"
