--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -46,3 +46,8 @@ jobs:
         coverage run -m pytest -m 'not live_api' --tb=short
         echo "!! run coverage report"
         coverage report -m
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
